# dj-learn

./: README.md  pyproject.toml
.github/workflows/: django.yml  python-publish.yml
dj_learn/: __init__.py  apps.py  models.py  urls.py  views.py
dj_learn/tests/: __init__.py
