[tool.poetry]
name = "admin-redesign"
version = "0.1.0"
description = "Redesign of Django admin interface using Bootstrap 5"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "admin_redesign"}]
homepage = "https://github.com/youzarsiph/admin-redesign/"
repository = "https://github.com/youzarsiph/admin-redesign/"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
