[tool.poetry]
name = "dj-learn"
version = "0.1.0"
description = "Django and Sci-Kit learn integration"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dj_learn"}]
homepage = "https://github.com/youzarsiph/dj-learn/"
repository = "https://github.com/youzarsiph/dj-learn/"

[tool.poetry.dependencies]
python = "^3.9"
django = "^5.0.4"
djangorestframework = "^3.15"
scikit-learn = "^1.4.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
